--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>AB Transport - Reliable Trucking Services</title>
+    <title>A B Transport - Reliable Trucking Services</title>
     <link rel="stylesheet" href="styles.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -14,7 +14,7 @@
     <header class="header">
         <nav class="nav-container">
             <div class="logo">
-                <h1>AB Transport</h1>
+                <h1>A B Transport</h1>
             </div>
             <ul class="nav-menu">
                 <li><a href="#home" data-translate="nav.home">Home</a></li>
@@ -72,11 +72,11 @@
     <!-- About Section -->
     <section id="about" class="about">
         <div class="container">
-            <h2 class="section-title" data-translate="about.title">About AB Transport</h2>
+            <h2 class="section-title" data-translate="about.title">About A B Transport</h2>
             <div class="about-content">
                 <div class="about-text">
-                    <p data-translate="about.paragraph1">With years of experience in the transportation industry, AB Transport has built a reputation for reliability, safety, and exceptional service. Our small fleet allows us to provide personalized attention to every shipment.</p>
-                    <p data-translate="about.paragraph2">We specialize in regional and local transportation, ensuring your goods reach their destination safely and on schedule. Our team of professional drivers is dedicated to maintaining the highest standards of service.</p>
+                    <p data-translate="about.paragraph1">With years of experience in the transportation industry, A B Transport has built a reputation for reliability, safety, and exceptional service. Our small fleet allows us to provide personalized attention to every shipment.</p>
+                    <p data-translate="about.paragraph2">We specialize in domestic and international transportation, ensuring your goods reach their destination safely and on schedule. Our team of professional drivers is dedicated to maintaining the highest standards of service.</p>
                     <div class="stats">
                         <div class="stat">
                             <h3>10+</h3>
@@ -119,7 +119,7 @@
                 <div class="service-card">
                     <div class="service-icon">🏭</div>
                     <h3 data-translate="services.warehouse.title">Warehouse Logistics</h3>
-                    <p data-translate="services.warehouse.description">Comprehensive warehouse and logistics solutions to streamline your supply chain operations.</p>
+                    <p data-translate="services.warehouse.description">Comprehensive warehouse and logistics solutions to streamline your supply chain operations, including transshipment and reloading services.</p>
                 </div>
                 <div class="service-card">
                     <div class="service-icon">🛡️</div>
@@ -207,7 +207,7 @@
         <div class="container">
             <div class="footer-content">
                 <div class="footer-section">
-                    <h3 data-translate="footer.company">AB Transport</h3>
+                    <h3 data-translate="footer.company">A B Transport</h3>
                     <p data-translate="footer.description">Your trusted partner in transportation and logistics services.</p>
                 </div>
                 <div class="footer-section">
@@ -226,7 +226,7 @@
                 </div>
             </div>
             <div class="footer-bottom">
-                <p data-translate="footer.copyright">&copy; 2024 AB Transport. All rights reserved.</p>
+                <p data-translate="footer.copyright">&copy; 2024 A B Transport. All rights reserved.</p>
             </div>
         </div>
     </footer>
